Fixed select style on firefox

--- a/JavaScript/RSS_dashboard/public/css/custom.css
+++ b/JavaScript/RSS_dashboard/public/css/custom.css
@@ -36,6 +36,7 @@
 }
 select {
   -webkit-appearance:none;
+  -moz-appearance:none;
 }
 .label-info {
   background-color: #5000BE;
